--- a/registers-and-submited.css
+++ b/registers-and-submited.css
@@ -6,7 +6,7 @@ body,
 html {
   background: linear-gradient(45deg, royalblue, navy, indigo, purple);
   height: 900px;
-  font-family: Tahoma, fantasy;
+  font-family: Dosis, Verdana, Geneva, Tahoma, sans-serif;
   font-size: 10pt;
 }
 
